# critExample

./: Readme.md  critExample.cabal
bench/: Benchmarks.hs
src/: Chi.hs  Sibi.hs  User3237465.hs
