name:                critExample
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/epsilonhalbe/critExample#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Heuschober
maintainer:          martin.heuschober@gmail.com
copyright:           2015 (C) Martin Heuschober
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chi
                 ,     Sibi
                 ,     User3237465
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


benchmark addNums
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Benchmarks.hs
  build-depends:       base
                     , critExample
                     , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/epsilonhalbe/critExample
